--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,6 @@
 DirectorySlash Off
 Options -Indexes
+
+RewriteEngine on
+RewriteCond %{HTTP_HOST} aaaliasing\.net
+RewriteRule ^(.*)$ http://try.haxe.org/$1 [R=301]
