--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "CodeMirror2"]
 	path = lib/CodeMirror2
-	url = git://github.com/marijnh/CodeMirror2.git
+	url = git://github.com/marijnh/CodeMirror.git
 [submodule "haxe-bootstrap"]
 	path = lib/haxe-bootstrap
 	url = git://github.com/clemos/haxe-bootstrap.git
