Ported to CodeMirror 4. Reused code from HIDE(completion filtering, linting)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "CodeMirror2"]
-	path = lib/CodeMirror2
-	url = git://github.com/marijnh/CodeMirror.git
 [submodule "haxe-bootstrap"]
 	path = lib/haxe-bootstrap
 	url = git://github.com/clemos/haxe-bootstrap.git
+[submodule "lib/CodeMirror-4"]
+	path = lib/CodeMirror-4
+	url = git@github.com:marijnh/CodeMirror.git
