fixed issues with rewriting / deploy

--- a/.htaccess
+++ b/.htaccess
@@ -13,13 +13,16 @@ RewriteCond %{REQUEST_URI} !index.php
 RewriteCond %{REQUEST_URI} ^/~([^/]*)/
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^/(.*)$ /~%1/try-haxe/app/index.php?_url=$1 [L,QSA]
+RewriteRule ^(.*)$ /~%1/try-haxe/app/index.php?_url=$1 [L,QSA]
 
 # try.haxe.org
 RewriteCond %{HTTP_HOST} try\.haxe\.org
+RewriteRule ^$ /index.html [L,QSA]
+
+RewriteCond %{HTTP_HOST} try\.haxe\.org
 RewriteCond %{REQUEST_URI} !index.php
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^/(.*)$ /app/index.php?_url=$1&_root= [L,QSA]
+RewriteRule ^(.*)$ /app/index.php?_url=$1&_root= [L,QSA]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ app/index.php?_url=$1 [L,QSA]
